sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:8: error: ')' expected but integer literal found.
    if (gap==9  gap==10) {
                     ^AlgCombSort11:26: error: illegal start of simple expression
  } while (verif || gap>1)
  ^